--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "bpourkazemi",
  	"version": "0.1.0",
-  	"devDependencies": {
+  	"dependencies": {
     	"express": "3.1.x"
   },
   "engines": {
